--- a/emacs/settings.org
+++ b/emacs/settings.org
@@ -70,13 +70,6 @@ Find system name with =(system-name)=
 ;; Allows mark-type-delete
 (delete-selection-mode t)
 
-;; Starting file
-(setq initial-buffer-choice
-      (lambda ()
-	(if (buffer-file-name)
-	    (current-buffer)
-	  (find-file "~/Code/personal_config/org/brujula.org"))))
-
 ;; enable column numbers
 (setq column-number-mode t)
 
@@ -89,7 +82,7 @@ Find system name with =(system-name)=
 ;; always allow 'y' instead of 'yes'.
 (setq use-short-answers t)
 
-					; default to utf-8 for all the things
+;; default to utf-8 for all the things
 (set-charset-priority 'unicode)
 (setq locale-coding-system 'utf-8
       coding-system-for-read 'utf-8
@@ -227,7 +220,8 @@ Find system name with =(system-name)=
 
 * Magit
 #+begin_src emacs-lisp
-(use-package magit)
+(use-package magit
+  :defer t)
 
 ;; Config for windows
 (if (eq system-type 'windows-nt)
@@ -258,6 +252,7 @@ Find system name with =(system-name)=
 ** Cheatsheet
 #+begin_src emacs-lisp
 (use-package cheatsheet
+  :defer t
   :config
   (cheatsheet-add-group 'Info
 			'(:key "C-x l" :description "count-lines-page"))
@@ -315,13 +310,16 @@ Find system name with =(system-name)=
 ** Miscellanea 
 #+BEGIN_SRC emacs-lisp
 ;; csv-mode is not default anymore
-(use-package csv-mode)
+(use-package csv-mode
+  :defer t)
 
 ;; load screenshot script
 ;; cloned from https://github.com/tecosaur/screenshot
 ;; Require pckgs <transient> and <posframe>
-(use-package transient)
-(use-package posframe)
+(use-package transient
+  :defer t)
+(use-package posframe
+  :defer t)
 
 (defun tt/load-screenshot()
   (interactive)
@@ -340,11 +338,13 @@ Find system name with =(system-name)=
 
 ;; neotree
 (use-package neotree
+  :defer t
   :config
   (setq neo-theme 'icons))
 
 ;; htmlize to improve rendering of source code blocks
-(use-package htmlize)
+(use-package htmlize
+  :defer t)
 
 ;; all the icons
 (use-package all-the-icons
@@ -368,6 +368,7 @@ Find system name with =(system-name)=
 	)
 
   (use-package flymake
+    :defer t
     :config
     (remove-hook 'flymake-diagnostic-functions 'flymake-proc-legacy-flymake))
 
@@ -409,6 +410,7 @@ Find system name with =(system-name)=
 
   ;; ESS config
   (use-package ess
+    :defer t
     :init
     (setq ess-style 'RStudio)
     :hook ((inferior-ess-mode . tt-inferior-ess-keymap)
@@ -448,6 +450,7 @@ And in general for [[https://lintr.r-lib.org/index.html][lintr]] and [[https://s
 ;;   (setq flycheck-lintr-linters tt/lintr-linters))
 
 (use-package flycheck
+  :defer t
   :if (eq system-type 'windows-nt)
   :init
   (setq flycheck-r-lintr-executable "C:\\Users\\teodorm3\\Bin\\R-4.2.1\\bin\\x64\\R.exe")
@@ -457,11 +460,27 @@ And in general for [[https://lintr.r-lib.org/index.html][lintr]] and [[https://s
 
 ** R-markdown and quarto
  #+BEGIN_SRC emacs-lisp
+ ;; Add chunk
+ (defun tt-rmarkdown-new-chunk (name)
+   "Insert a new R chunk."
+   (interactive "sChunk name: ")
+   (insert "\n```{r " name "}\n")
+   (save-excursion
+     (newline)
+     (insert "```\n")
+     (previous-line)))
+
   ;; R markdown
- (use-package polymode)
- (use-package poly-R)
- (use-package poly-markdown)
- (use-package quarto-mode)
+ (use-package polymode
+   :defer t)
+ (use-package poly-R
+   :defer t)
+ (use-package poly-markdown
+   :defer t
+   :config
+   (define-key markdown-mode-map "\C-c`" 'tt-rmarkdown-new-chunk))
+ (use-package quarto-mode
+   :defer t)
 
  ;; MARKDOWN
  (add-to-list 'auto-mode-alist '("\\.md" . poly-markdown-mode))
@@ -471,23 +490,12 @@ And in general for [[https://lintr.r-lib.org/index.html][lintr]] and [[https://s
  (add-to-list 'auto-mode-alist '("\\.Rnw" . poly-noweb+r-mode))
  (add-to-list 'auto-mode-alist '("\\.Rmd" . poly-markdown+r-mode))
   ;;(autoload 'r-mode "ess-site" "(Autoload)" t)
-
- ;; Add chunk
- (defun rmarkdown-new-chunk (name)
-   "Insert a new R chunk."
-   (interactive "sChunk name: ")
-   (insert "\n```{r " name "}\n")
-   (save-excursion
-     (newline)
-     (insert "```\n")
-     (previous-line)))
- ;; Map it to C-c `
- (define-key markdown-mode-map "\C-c`" 'rmarkdown-new-chunk)
  #+END_SRC
 
 * Company (auto complete code)
 #+BEGIN_SRC emacs-lisp
   (use-package company
+    :defer t
     :config
     ;; Turn on company-mode globally:
     (add-hook 'after-init-hook 'global-company-mode)
@@ -509,6 +517,7 @@ And in general for [[https://lintr.r-lib.org/index.html][lintr]] and [[https://s
 	company-tooltip-limit 10))
 
   (use-package company-quickhelp
+    :defer t
     :custom
     ;; Load company-quickhelp globally:
     (company-quickhelp-mode)
@@ -540,6 +549,7 @@ And in general for [[https://lintr.r-lib.org/index.html][lintr]] and [[https://s
 #+BEGIN_SRC emacs-lisp
 (use-package org
   :ensure nil
+  :defer t
   :bind
   ("M-q" . toggle-truncate-lines)
   ("C-c a" . org-agenda)
@@ -575,6 +585,7 @@ And in general for [[https://lintr.r-lib.org/index.html][lintr]] and [[https://s
 ** org-tempo for templates
 #+begin_src emacs-lisp
 (use-package org-tempo
+  :after (org)
   :ensure nil
   :config
   ;; clocktable
@@ -596,7 +607,8 @@ And in general for [[https://lintr.r-lib.org/index.html][lintr]] and [[https://s
 
 ** org-transclusion
 #+begin_src emacs-lisp
-(use-package org-transclusion)
+(use-package org-transclusion
+  :defer t)
 #+end_src
 * Python3
 For elpy to work, it is necessary to install first jedi, either by =apt install python3-jedi= or =pip3 install jedi=.
@@ -610,6 +622,7 @@ More on python on emacs [[https://realpython.com/emacs-the-best-python-editor/#e
 (if (eq system-type 'gnu/linux)
     (progn
       (use-package elpy
+	:defer t
 	:if (eq system-type 'gnu/linux)
 	:init
 	(setq elpy-rpc-python-command "python3")
@@ -621,15 +634,18 @@ More on python on emacs [[https://realpython.com/emacs-the-best-python-editor/#e
 	(add-to-list 'python-shell-completion-native-disabled-interpreters
 		     "jupyter"))
 
-      (use-package jedi)
+      (use-package jedi
+	:defer t)
 
       ;; Auto formatting help
       ;; Requires to install python "black"
       ;; Use it by calling M-x blacken-buffer
-      (use-package blacken)
+      (use-package blacken
+	:defer t)
 
       ;; Jupyter and iPython
       (use-package ein
+	:defer t
 	:hook (ein:connect-mode-hook . ein:jedi-setup))))
 #+END_SRC
 
@@ -639,8 +655,9 @@ More on python on emacs [[https://realpython.com/emacs-the-best-python-editor/#e
 #+begin_src emacs-lisp
 (use-package tabspaces
   :hook (after-init . tabspaces-mode)
-  :custom
+  :init
   (customize-set-variable 'tabspaces-initialize-project-with-todo nil)
+  :custom
   (customize-set-variable 'tabspaces-default-tab "Base")
   (customize-set-variable 'tabspaces-include-buffers '("*scratch*"))
   (customize-set-variable 'tabspaces-use-filtered-buffers-as-default t))
@@ -648,11 +665,11 @@ More on python on emacs [[https://realpython.com/emacs-the-best-python-editor/#e
 * Fonts and themes
 #+BEGIN_SRC emacs-lisp
 ;; All the icons
-(use-package all-the-icons)
+(use-package all-the-icons
+  :defer t)
 
 ;; Modus Themes ---
 (use-package modus-themes
-  :ensure t
   :config
   ;; Add all your customizations prior to loading the themes
   (setq modus-themes-italic-constructs t
@@ -867,18 +884,11 @@ More on python on emacs [[https://realpython.com/emacs-the-best-python-editor/#e
 * Shells
 #+begin_src emacs-lisp
 (use-package esh-autosuggest
+  :defer t
   :hook (eshell-mode . esh-autosuggest-mode))
 #+end_src
 * Dired extras
 #+begin_src emacs-lisp
-(setq dired-listing-switches "-aBhl --group-directories-first")
-
-(use-package all-the-icons-dired
-  :defer t
-  :hook   (dired-mode . all-the-icons-dired-mode))
-
-(require 'dired-ranger)
-
 ;; My keybindings
 (defvar tt-dired-keymap
   (let ((map (make-sparse-keymap)))
@@ -888,7 +898,19 @@ More on python on emacs [[https://realpython.com/emacs-the-best-python-editor/#e
     map)
   "Key map for dired extensions")
 
-(define-key dired-mode-map (kbd "C-c t") tt-dired-keymap)
+(use-package dired
+  :ensure nil
+  :defer t
+  :config
+  (define-key dired-mode-map (kbd "C-c t") tt-dired-keymap)
+  (setq dired-listing-switches "-aBhl --group-directories-first"))
+
+(use-package all-the-icons-dired
+  :defer t
+  :hook   (dired-mode . all-the-icons-dired-mode))
+
+(use-package dired-ranger
+  :defer t)
 #+end_src
 * Garbage collection
 #+BEGIN_SRC emacs-lisp
