--- a/emacs/settings.org
+++ b/emacs/settings.org
@@ -70,6 +70,13 @@ Find system name with =(system-name)=
 ;; Allows mark-type-delete
 (delete-selection-mode t)
 
+;; Starting file
+(setq initial-buffer-choice
+      (lambda ()
+	(if (buffer-file-name)
+	    (current-buffer)
+	  (find-file "~/Code/personal_config/org/brujula.org"))))
+
 ;; enable column numbers
 (setq column-number-mode t)
 
@@ -82,7 +89,7 @@ Find system name with =(system-name)=
 ;; always allow 'y' instead of 'yes'.
 (setq use-short-answers t)
 
-;; default to utf-8 for all the things
+					; default to utf-8 for all the things
 (set-charset-priority 'unicode)
 (setq locale-coding-system 'utf-8
       coding-system-for-read 'utf-8
@@ -314,8 +321,7 @@ nil are ignored."
 
 * Magit
 #+begin_src emacs-lisp
-(use-package magit
-  :defer t)
+(use-package magit)
 
 ;; Config for windows
 (if (eq system-type 'windows-nt)
@@ -346,7 +352,6 @@ nil are ignored."
 ** Cheatsheet
 #+begin_src emacs-lisp
 (use-package cheatsheet
-  :defer t
   :config
   (cheatsheet-add-group 'Info
 			'(:key "C-x l" :description "count-lines-page"))
@@ -404,16 +409,13 @@ nil are ignored."
 ** Miscellanea 
 #+BEGIN_SRC emacs-lisp
 ;; csv-mode is not default anymore
-(use-package csv-mode
-  :defer t)
+(use-package csv-mode)
 
 ;; load screenshot script
 ;; cloned from https://github.com/tecosaur/screenshot
 ;; Require pckgs <transient> and <posframe>
-(use-package transient
-  :defer t)
-(use-package posframe
-  :defer t)
+(use-package transient)
+(use-package posframe)
 
 (defun tt/load-screenshot()
   (interactive)
@@ -432,13 +434,11 @@ nil are ignored."
 
 ;; neotree
 (use-package neotree
-  :defer t
   :config
   (setq neo-theme 'icons))
 
 ;; htmlize to improve rendering of source code blocks
-(use-package htmlize
-  :defer t)
+(use-package htmlize)
 
 ;; all the icons
 (use-package all-the-icons
@@ -462,7 +462,6 @@ nil are ignored."
 	)
 
   (use-package flymake
-    :defer t
     :config
     (remove-hook 'flymake-diagnostic-functions 'flymake-proc-legacy-flymake))
 
@@ -504,7 +503,6 @@ nil are ignored."
 
   ;; ESS config
   (use-package ess
-    :defer t
     :init
     (setq ess-style 'RStudio)
     :hook ((inferior-ess-mode . tt-inferior-ess-keymap)
@@ -544,7 +542,6 @@ And in general for [[https://lintr.r-lib.org/index.html][lintr]] and [[https://s
 ;;   (setq flycheck-lintr-linters tt/lintr-linters))
 
 (use-package flycheck
-  :defer t
   :if (eq system-type 'windows-nt)
   :init
   (setq flycheck-r-lintr-executable "C:\\Users\\teodorm3\\Bin\\R-4.2.1\\bin\\x64\\R.exe")
@@ -554,27 +551,11 @@ And in general for [[https://lintr.r-lib.org/index.html][lintr]] and [[https://s
 
 ** R-markdown and quarto
  #+BEGIN_SRC emacs-lisp
- ;; Add chunk
- (defun tt-rmarkdown-new-chunk (name)
-   "Insert a new R chunk."
-   (interactive "sChunk name: ")
-   (insert "\n```{r " name "}\n")
-   (save-excursion
-     (newline)
-     (insert "```\n")
-     (previous-line)))
-
   ;; R markdown
- (use-package polymode
-   :defer t)
- (use-package poly-R
-   :defer t)
- (use-package poly-markdown
-   :defer t
-   :config
-   (define-key markdown-mode-map "\C-c`" 'tt-rmarkdown-new-chunk))
- (use-package quarto-mode
-   :defer t)
+ (use-package polymode)
+ (use-package poly-R)
+ (use-package poly-markdown)
+ (use-package quarto-mode)
 
  ;; MARKDOWN
  (add-to-list 'auto-mode-alist '("\\.md" . poly-markdown-mode))
@@ -584,12 +565,23 @@ And in general for [[https://lintr.r-lib.org/index.html][lintr]] and [[https://s
  (add-to-list 'auto-mode-alist '("\\.Rnw" . poly-noweb+r-mode))
  (add-to-list 'auto-mode-alist '("\\.Rmd" . poly-markdown+r-mode))
   ;;(autoload 'r-mode "ess-site" "(Autoload)" t)
+
+ ;; Add chunk
+ (defun rmarkdown-new-chunk (name)
+   "Insert a new R chunk."
+   (interactive "sChunk name: ")
+   (insert "\n```{r " name "}\n")
+   (save-excursion
+     (newline)
+     (insert "```\n")
+     (previous-line)))
+ ;; Map it to C-c `
+ (define-key markdown-mode-map "\C-c`" 'rmarkdown-new-chunk)
  #+END_SRC
 
 * Company (auto complete code)
 #+BEGIN_SRC emacs-lisp
   (use-package company
-    :defer t
     :config
     ;; Turn on company-mode globally:
     (add-hook 'after-init-hook 'global-company-mode)
@@ -611,7 +603,6 @@ And in general for [[https://lintr.r-lib.org/index.html][lintr]] and [[https://s
 	company-tooltip-limit 10))
 
   (use-package company-quickhelp
-    :defer t
     :custom
     ;; Load company-quickhelp globally:
     (company-quickhelp-mode)
@@ -643,7 +634,6 @@ And in general for [[https://lintr.r-lib.org/index.html][lintr]] and [[https://s
 #+BEGIN_SRC emacs-lisp
 (use-package org
   :ensure nil
-  :defer t
   :bind
   ("M-q" . toggle-truncate-lines)
   ("C-c a" . org-agenda)
@@ -679,7 +669,6 @@ And in general for [[https://lintr.r-lib.org/index.html][lintr]] and [[https://s
 ** org-tempo for templates
 #+begin_src emacs-lisp
 (use-package org-tempo
-  :after (org)
   :ensure nil
   :config
   ;; clocktable
@@ -701,8 +690,7 @@ And in general for [[https://lintr.r-lib.org/index.html][lintr]] and [[https://s
 
 ** org-transclusion
 #+begin_src emacs-lisp
-(use-package org-transclusion
-  :defer t)
+(use-package org-transclusion)
 #+end_src
 * Python3
 For elpy to work, it is necessary to install first jedi, either by =apt install python3-jedi= or =pip3 install jedi=.
@@ -716,7 +704,6 @@ More on python on emacs [[https://realpython.com/emacs-the-best-python-editor/#e
 (if (eq system-type 'gnu/linux)
     (progn
       (use-package elpy
-	:defer t
 	:if (eq system-type 'gnu/linux)
 	:init
 	(setq elpy-rpc-python-command "python3")
@@ -728,18 +715,15 @@ More on python on emacs [[https://realpython.com/emacs-the-best-python-editor/#e
 	(add-to-list 'python-shell-completion-native-disabled-interpreters
 		     "jupyter"))
 
-      (use-package jedi
-	:defer t)
+      (use-package jedi)
 
       ;; Auto formatting help
       ;; Requires to install python "black"
       ;; Use it by calling M-x blacken-buffer
-      (use-package blacken
-	:defer t)
+      (use-package blacken)
 
       ;; Jupyter and iPython
       (use-package ein
-	:defer t
 	:hook (ein:connect-mode-hook . ein:jedi-setup))))
 #+END_SRC
 
@@ -749,9 +733,8 @@ More on python on emacs [[https://realpython.com/emacs-the-best-python-editor/#e
 #+begin_src emacs-lisp
 (use-package tabspaces
   :hook (after-init . tabspaces-mode)
-  :init
-  (customize-set-variable 'tabspaces-initialize-project-with-todo nil)
   :custom
+  (customize-set-variable 'tabspaces-initialize-project-with-todo nil)
   (customize-set-variable 'tabspaces-default-tab "Base")
   (customize-set-variable 'tabspaces-include-buffers '("*scratch*"))
   (customize-set-variable 'tabspaces-use-filtered-buffers-as-default t))
@@ -759,11 +742,11 @@ More on python on emacs [[https://realpython.com/emacs-the-best-python-editor/#e
 * Fonts and themes
 #+BEGIN_SRC emacs-lisp
 ;; All the icons
-(use-package all-the-icons
-  :defer t)
+(use-package all-the-icons)
 
 ;; Modus Themes ---
 (use-package modus-themes
+  :ensure t
   :config
   ;; Add all your customizations prior to loading the themes
   (setq modus-themes-italic-constructs t
@@ -978,11 +961,18 @@ More on python on emacs [[https://realpython.com/emacs-the-best-python-editor/#e
 * Shells
 #+begin_src emacs-lisp
 (use-package esh-autosuggest
-  :defer t
   :hook (eshell-mode . esh-autosuggest-mode))
 #+end_src
 * Dired extras
 #+begin_src emacs-lisp
+(setq dired-listing-switches "-aBhl --group-directories-first")
+
+(use-package all-the-icons-dired
+  :defer t
+  :hook   (dired-mode . all-the-icons-dired-mode))
+
+(require 'dired-ranger)
+
 ;; My keybindings
 (defvar tt-dired-keymap
   (let ((map (make-sparse-keymap)))
@@ -992,19 +982,7 @@ More on python on emacs [[https://realpython.com/emacs-the-best-python-editor/#e
     map)
   "Key map for dired extensions")
 
-(use-package dired
-  :ensure nil
-  :defer t
-  :config
-  (define-key dired-mode-map (kbd "C-c t") tt-dired-keymap)
-  (setq dired-listing-switches "-aBhl --group-directories-first"))
-
-(use-package all-the-icons-dired
-  :defer t
-  :hook   (dired-mode . all-the-icons-dired-mode))
-
-(use-package dired-ranger
-  :defer t)
+(define-key dired-mode-map (kbd "C-c t") tt-dired-keymap)
 #+end_src
 * Garbage collection
 #+BEGIN_SRC emacs-lisp
