--- a/emacs/settings.org
+++ b/emacs/settings.org
@@ -626,6 +626,7 @@ And in general for [[https://lintr.r-lib.org/index.html][lintr]] and [[https://s
 	company-tooltip-limit 10))
 
   (use-package company-quickhelp
+    :after company
     :custom
     ;; Load company-quickhelp globally:
     (company-quickhelp-mode)
