Giving corfu a second chance

--- a/emacs/settings.org
+++ b/emacs/settings.org
@@ -603,7 +603,7 @@ And in general for [[https://lintr.r-lib.org/index.html][lintr]] and [[https://s
  #+END_SRC
 
 * Company (auto complete code)
-#+BEGIN_SRC emacs-lisp
+#+BEGIN_SRC
   (use-package company
     :config
     ;; Turn on company-mode globally:
@@ -1133,32 +1133,34 @@ selected text, etc. It works well with consult but it requires package embark-co
 #+end_src
 
 ** Corfu and cape
+*GIVING CORFU A SECOND CHANCE*
+
 These are tools for autocomplete code, I have my doubts because company works by default on ESS, while corfu do not seem to have support for R. We can anyway try it and search for particular support. For now, we are testing.
 
 Additionally, cape supports corfu but it has support for company too, however I am still not convinced on the need of corfu, I haven't seen it in action enough.
 
 For now we keep company turn off while we testthis.
-#+BEGIN_SRC
+#+BEGIN_SRC emacs-lisp
   ;;; Corfu
-  ;; (when (require 'corfu nil :noerror)
+  (when (require 'corfu nil :noerror)
 
-  ;;   (unless (display-graphic-p)
-  ;;     (when (require 'corfu-terminal nil :noerror)
-  ;; 	(corfu-terminal-mode +1)))
+    (unless (display-graphic-p)
+      (when (require 'corfu-terminal nil :noerror)
+	(corfu-terminal-mode +1)))
 
-  ;;   ;; Setup corfu for popup like completion
-  ;;   (customize-set-variable 'corfu-cycle t)        ; Allows cycling through candidates
-  ;;   (customize-set-variable 'corfu-auto t)         ; Enable auto completion
-  ;;   (customize-set-variable 'corfu-auto-prefix 2)  ; Complete with less prefix keys
+    ;; Setup corfu for popup like completion
+    (customize-set-variable 'corfu-cycle t)        ; Allows cycling through candidates
+    (customize-set-variable 'corfu-auto t)         ; Enable auto completion
+    (customize-set-variable 'corfu-auto-prefix 2)  ; Complete with less prefix keys
 
-  ;;   (global-corfu-mode 1)
-  ;;   (when (require 'corfu-popupinfo nil :noerror)
+    (global-corfu-mode 1)
+    (when (require 'corfu-popupinfo nil :noerror)
 
-  ;;     (corfu-popupinfo-mode 1)
-  ;;     (eldoc-add-command #'corfu-insert)
-  ;;     (keymap-set corfu-map "M-p" #'corfu-popupinfo-scroll-down)
-  ;;     (keymap-set corfu-map "M-n" #'corfu-popupinfo-scroll-up)
-  ;;     (keymap-set corfu-map "M-d" #'corfu-popupinfo-toggle)))
+      (corfu-popupinfo-mode 1)
+      (eldoc-add-command #'corfu-insert)
+      (keymap-set corfu-map "M-p" #'corfu-popupinfo-scroll-down)
+      (keymap-set corfu-map "M-n" #'corfu-popupinfo-scroll-up)
+      (keymap-set corfu-map "M-d" #'corfu-popupinfo-toggle)))
 
   (when (require 'cape nil :noerror)
   ;; Setup Cape for better completion-at-point support and more
