--- a/emacs/settings.org
+++ b/emacs/settings.org
@@ -145,6 +145,10 @@ Find system name with =(system-name)=
 ;; Requires to create file ~/.gnupg/gpg-agent.conf and add the following lines
 ;; allow-emacs-pinentry
 ;; allow-loopback-pinentry
+
+;; Save a list of recent files visited. (open recent file with C-x f)
+(recentf-mode 1)
+(setq recentf-max-saved-items 100) ;; just 20 is too recent
 #+END_SRC
 
 ** Personal funcs
@@ -190,6 +194,7 @@ Find system name with =(system-name)=
      ((string= selected-font "Monospace")
       (tt/set-font-if-found "Cascadia Mono" "Monospace" font-size)))))
 #+end_src
+
 ** Global keybindings
 #+begin_src emacs-lisp
 ;; Keybindings to toggle 
@@ -805,17 +810,6 @@ More on python on emacs [[https://realpython.com/emacs-the-best-python-editor/#e
 ;; tab bar mode
 (setq tab-bar-close-button-show nil)
 (setq tab-bar-new-button-show nil)
-
-;; (use-package powerline)
-;; (defvar tt-tabbar-height 20)
-;; (defvar tt-tabbar-left (powerline-wave-right 'tab-bar nil tt-tabbar-height))
-;; (defvar tt-tabbar-right (powerline-wave-left nil 'tab-bar tt-tabbar-height))
-;; (defun tt-tabbar-tab-label-function (tab)
-;;   (powerline-render (list tt-tabbar-left
-;;                           (format " %s  " (car tab))
-;;                           tt-tabbar-right)))
-;; (setq tabbar-tab-label-function #'tt-tabbar-tab-label-function)
-
 #+END_SRC
 * Auto complete emacs
 ** Ivy, Counsel and Smex
